kubernetes/network-policy.yaml
# politica por defecto deny all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
# permitir legacy-app a postgres
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-legacy-to-postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: legacy-app
    ports:
    - protocol: TCP
      port: 5432
---
# permitir microservice a legacy-app
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-microservice-to-legacy
spec:
  podSelector:
    matchLabels:
      app: legacy-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: new-microservice
    ports:
    - protocol: TCP
      port: 5000
---
# permitir trafico desde ingress a aplicaciones
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-apps
spec:
  podSelector:
    matchLabels:
      app: legacy-app
  policyTypes:
  - Ingress
  ingress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-microservice
spec:
  podSelector:
    matchLabels:
      app: new-microservice
  policyTypes:
  - Ingress
  ingress:
  - {}
